# btc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cxx
src/: CMakeLists.txt  hasher.hxx  main.cxx  opencl.hxx  scrypt-sse2.cxx  scrypt.cxx  serdes.hxx  utility.hxx
src/common/: crypto.hxx  logging.hxx  profile.hxx  types.hxx
src/io/: io.hxx  ops.hxx
src/opencl/: opencl.hxx
src/proto/: commands.hxx  script.hxx
src/shaders/: hasher.cl  hasher.cl-  hasher.clworks
